Added maven and junit tests to 2021 java solutions!